@@ -5724,4 +5724,3 @@ return array(
 		),
 	),
 );
-?>
